--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^5.0.1",
+        "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-popover": "^1.1.6",
+        "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-switch": "^1.1.3",
         "@reduxjs/toolkit": "^2.6.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "handy-man-frontend": "file:",
         "lucide-react": "^0.487.0",
         "next": "15.2.4",
